--- a/test.html
+++ b/test.html
@@ -769,7 +769,7 @@
           <div class="platform-badge youtube">YOUTUBE</div>
         </div>
         <div class="video-info">
-          <h3 class="video-title">Volkswagen Golf Variant - Test</h3>
+          <h3 class="video-title">Volkswagen Golf Variant 2013</h3>
           <p class="video-description">Praktické kombi od Volkswagenu. Jak se osvědčil Golf Variant v dlouhodobém testu?</p>
           <div class="video-tags">
             <span class="video-tag">volkswagen</span>
@@ -780,7 +780,7 @@
             <span class="video-tag">recenze</span>
           </div>
           <div class="video-meta">
-            <span>10. prosince 2024</span>
+            <span>10. října 2013</span>
             <span><i class="fab fa-youtube"></i></span>
           </div>
         </div>
@@ -788,7 +788,7 @@
         <div class="video-data" style="display: none;">
           <span class="video-url">https://youtu.be/dsd-Hw44dzk</span>
           <span class="video-platform">youtube</span>
-          <span class="video-date">2024-12-10</span>
+          <span class="video-date">2013-10-10</span>
           <span class="video-full-description">Praktické kombi od Volkswagenu. Testujeme prostornost, jízdní vlastnosti a celkovou praktičnost Golf Variantu. Jak se osvědčil v dlouhodobém testu?</span>
         </div>
       </div>
@@ -803,7 +803,7 @@
           <div class="platform-badge youtube">YOUTUBE</div>
         </div>
         <div class="video-info">
-          <h3 class="video-title">Honda CR-V - Kompletní Test</h3>
+          <h3 class="video-title">Honda CR-V 2013</h3>
           <p class="video-description">Detailní test nové generace Honda CR-V. Jak si vede v praxi a co nabízí za svoje peníze?</p>
           <div class="video-tags">
             <span class="video-tag">honda</span>
@@ -813,7 +813,7 @@
             <span class="video-tag">recenze</span>
           </div>
           <div class="video-meta">
-            <span>15. prosince 2024</span>
+            <span>1. října 2013</span>
             <span><i class="fab fa-youtube"></i></span>
           </div>
         </div>
@@ -821,7 +821,7 @@
         <div class="video-data" style="display: none;">
           <span class="video-url">https://youtu.be/dsd-Hw44dzk</span>
           <span class="video-platform">youtube</span>
-          <span class="video-date">2024-12-15</span>
+          <span class="video-date">2013-10-1</span>
           <span class="video-full-description">Detailní test nové generace Honda CR-V. Testujeme výkon, spotřebu, komfort a praktičnost tohoto oblíbeného SUV. Jak si vede v praxi a co nabízí za svoje peníze?</span>
         </div>
       </div>
