--- a/test.html
+++ b/test.html
@@ -762,7 +762,7 @@
       <!-- VIDEO 2 - Volkswagen Golf Variant -->
       <div class="video-card" data-tags="volkswagen,golf,variant,kombi,test,recenze" onclick="openModal(this)">
         <div class="video-thumbnail">
-          <img src="https://img.youtube.com/vi/dsd-Hw44dzk/maxresdefault.jpg" alt="VW Golf Variant Test">
+          <img src="https://img.youtube.com/vi/XMER08w5yxo/maxresdefault.jpg" alt="VW Golf Variant Test">
           <div class="play-overlay">
             <i class="fas fa-play"></i>
           </div>
@@ -786,7 +786,7 @@
         </div>
         <!-- Skrytá data pro modal -->
         <div class="video-data" style="display: none;">
-          <span class="video-url">https://youtu.be/dsd-Hw44dzk</span>
+          <span class="video-url">https://youtu.be/XMER08w5yxo</span>
           <span class="video-platform">youtube</span>
           <span class="video-date">2013-10-10</span>
           <span class="video-full-description">Praktické kombi od Volkswagenu. Testujeme prostornost, jízdní vlastnosti a celkovou praktičnost Golf Variantu. Jak se osvědčil v dlouhodobém testu?</span>
