--- a/vttv.html
+++ b/vttv.html
@@ -1243,39 +1243,6 @@
         </div>
       </div>
 
-      <!-- Autosalon Ženeva 2018 - playlist -->
-      <div class="video-card" data-tags="autosalon,ženeva,novinky,test,reportáž,2018" onclick="openModal(this)">
-        <div class="video-thumbnail">
-          <img src="https://img.youtube.com/vi/LH5JYt_j__YQVGER/maxresdefault.jpg" alt="Autosalon Ženeva 2018">
-          <div class="play-overlay">
-            <i class="fas fa-play"></i>
-          </div>
-          <div class="platform-badge youtube">YOUTUBE</div>
-        </div>
-        <div class="video-info">
-          <h3 class="video-title">Autosalon Ženeva 2018</h3>
-          <p class="video-description">Reportáže z Autosalonu Ženeva 2018. Nejnovější automobilové novinky z celého světa.</p>
-          <div class="video-tags">
-            <span class="video-tag">autosalon</span>
-            <span class="video-tag">ženeva</span>
-            <span class="video-tag">novinky</span>
-            <span class="video-tag">test</span>
-            <span class="video-tag">reportáž</span>
-            <span class="video-tag">2018</span>
-          </div>
-          <div class="video-meta">
-            <span>10. března 2018</span>
-            <span><i class="fab fa-youtube"></i></span>
-          </div>
-        </div>
-        <div class="video-data" style="display: none;">
-          <span class="video-url">https://youtube.com/playlist?list=PLOVkY_GpJRo0r3UCbKWueD79Gtyaea4ZA</span>
-          <span class="video-platform">youtube</span>
-          <span class="video-date">2018-03-10</span>
-          <span class="video-full-description">Reportáže z Autosalonu Ženeva 2018. Série videí z nejdůležitějšího evropského autosalonu s nejnovějšími automobilovými novinkami z celého světa.</span>
-        </div>
-      </div>
-
       <!-- Hyundai Ioniq 2017 -->
       <div class="video-card" data-tags="hyundai,ioniq,hybrid,electric,test,recenze,2017" onclick="openModal(this)">
         <div class="video-thumbnail">
@@ -1447,35 +1414,41 @@
           <span class="video-full-description">Velký srovnávací test kompaktních SUV. Porovnáváme Seat Ateca, Hyundai Tucson a Škoda Yeti. Testujeme praktičnost, jízdní vlastnosti a cenu. Které je nejlepší volbou?</span>
         </div>
       </div>
+
+ <!-- Hyundai Ioniq 2017 -->
+      <div class="video-card" data-tags="hyundai,ioniq,hybrid,electric,test,recenze,2017" onclick="openModal(this)">
+        <div class="video-thumbnail">
+          <img src="https://img.youtube.com/vi/7_qhbw8IJVM/maxresdefault.jpg" alt="Hyundai Ioniq Test">
+          <div class="play-overlay">
             <i class="fas fa-play"></i>
           </div>
           <div class="platform-badge youtube">YOUTUBE</div>
         </div>
         <div class="video-info">
-          <h3 class="video-title">Hyundai Ioniq 2017</h3>
-          <p class="video-description">Test hybridního vozů Hyundai Ioniq. Korejská odpověď na Toyota Prius.</p>
+          <h3 class="video-title">Audi Q7 E-TRON 2017</h3>
+          <p class="video-description">Test plug-in hybridního SUV Audi Q7 E-TRON. Luxus s možností elektrické jízdy.</p>
           <div class="video-tags">
-            <span class="video-tag">hyundai</span>
-            <span class="video-tag">ioniq</span>
+            <span class="video-tag">audi</span>
+            <span class="video-tag">q7</span>
+            <span class="video-tag">e-tron</span>
             <span class="video-tag">hybrid</span>
-            <span class="video-tag">electric</span>
-            <span class="video-tag">test</span>
-            <span class="video-tag">recenze</span>
-            <span class="video-tag">2017</span>
+            <span class="video-tag">plug-in</span>
+            <span class="video-tag">luxury</span>
+            <span class="video-tag">suv</span>
           </div>
           <div class="video-meta">
-            <span>13. března 2017</span>
+            <span>2. února 2017</span>
             <span><i class="fab fa-youtube"></i></span>
           </div>
         </div>
         <div class="video-data" style="display: none;">
-          <span class="video-url">https://youtu.be/7_qhbw8IJVM</span>
+          <span class="video-url">https://www.youtube.com/watch?v=n4ewH8bUNFM</span>
           <span class="video-platform">youtube</span>
-          <span class="video-date">2017-03-13</span>
-          <span class="video-full-description">Test hybridního vozu Hyundai Ioniq. Korejská odpověď na Toyota Prius. Testujeme hybridní systém, spotřebu a jízdní vlastnosti.</span>
+          <span class="video-date">2017-02-02</span>
+          <span class="video-full-description">Test plug-in hybridního SUV Audi Q7 E-TRON. Testujeme luxusní výbavu, elektrický dojezd a jízdní vlastnosti. Luxus s možností elektrické jízdy.</span>
         </div>
       </div>
-
+      
       <!-- Volvo S90 2017 -->
       <div class="video-card" data-tags="volvo,s90,sedan,luxury,test,recenze,2017" onclick="openModal(this)">
         <div class="video-thumbnail">
