--- a/vttv.html
+++ b/vttv.html
@@ -692,8 +692,8 @@
   <div class="container">
     <!-- Hero sekce -->
     <div class="hero">
-      <h1>Galerie Videí</h1>
-      <p class="hero-subtitle">Všechna moje videa z YouTube na jednom místě</p>
+      <h1>VTTV</h1>
+      <p class="hero-subtitle">Všechna má videa s testy aut na jednom místě</p>
     </div>
 
     <!-- Video mřížka -->
