--- a/vttv.html
+++ b/vttv.html
@@ -675,7 +675,7 @@
 
   <nav id="navbar">
     <div class="nav-content">
-      <a href="#" class="logo-nav">Viktor Tamayo</a>
+      <a href="https://www.tamayo.cz" class="logo-nav">Viktor Tamayo</a>
       <div class="nav-right">
         <div class="search-container">
           <input type="text" class="search-box" id="searchBox" placeholder="Hledat videa...">
