--- a/vttv.html
+++ b/vttv.html
@@ -668,7 +668,7 @@
 
   <nav id="navbar">
     <div class="nav-content">
-      <a href="#" class="logo-nav">Viktor Tamayo</a>
+      <a href="http://www.tamayo.cz" class="logo-nav">Viktor Tamayo</a>
       <div class="nav-right">
         <div class="search-container">
           <input type="text" class="search-box" id="searchBox" placeholder="Hledat videa...">
@@ -685,8 +685,8 @@
   <div class="container">
     <!-- Hero sekce -->
     <div class="hero">
-      <h1>Galerie Videí</h1>
-      <p class="hero-subtitle">Všechna moje videa z YouTube na jednom místě</p>
+      <h1>VTTV.CZ</h1>
+      <p class="hero-subtitle">Všechna má videa z YouTube na jednom místě</p>
     </div>
 
     <!-- Počítadlo videí -->
