--- a/vttv.html
+++ b/vttv.html
@@ -1253,7 +1253,7 @@
           <div class="platform-badge youtube">YOUTUBE</div>
         </div>
         <div class="video-info">
-          <h3 class="video-title">Audi Q7 E-TRON 2017</h3>
+          <h3 class="video-title">Hyundai Ioniq 2017</h3>
           <p class="video-description">Test plug-in hybridního SUV Audi Q7 E-TRON. Luxus s možností elektrické jízdy.</p>
           <div class="video-tags">
             <span class="video-tag">audi</span>
@@ -1270,7 +1270,7 @@
           </div>
         </div>
         <div class="video-data" style="display: none;">
-          <span class="video-url">https://www.youtube.com/watch?v=n4ewH8bUNFM</span>
+          <span class="video-url">https://www.youtube.com/watch?v=7_qhbw8IJVM</span>
           <span class="video-platform">youtube</span>
           <span class="video-date">2017-02-02</span>
           <span class="video-full-description">Test plug-in hybridního SUV Audi Q7 E-TRON. Testujeme luxusní výbavu, elektrický dojezd a jízdní vlastnosti. Luxus s možností elektrické jízdy.</span>
@@ -1415,10 +1415,10 @@
         </div>
       </div>
 
- <!-- Hyundai Ioniq 2017 -->
+ <!-- Audi Q7 e TRON -->
       <div class="video-card" data-tags="hyundai,ioniq,hybrid,electric,test,recenze,2017" onclick="openModal(this)">
         <div class="video-thumbnail">
-          <img src="https://img.youtube.com/vi/7_qhbw8IJVM/maxresdefault.jpg" alt="Hyundai Ioniq Test">
+          <img src="https://img.youtube.com/vi/n4ewH8bUNFM/hqdefault.jpg" alt="Hyundai Ioniq Test">
           <div class="play-overlay">
             <i class="fas fa-play"></i>
           </div>
@@ -2027,7 +2027,7 @@
       <!-- Ojetina vs nové auto. Mercedes-Benz CL vs Hyundai Genesis 2015 -->
       <div class="video-card" data-tags="mercedes,cl,hyundai,genesis,ojetina,nové auto,porovnání,luxury,2015" onclick="openModal(this)">
         <div class="video-thumbnail">
-          <img src="https://img.youtube.com/vi/jDwjphR0y7U/maxresdefault.jpg" alt="Mercedes CL vs Hyundai Genesis">
+          <img src="https://img.youtube.com/vi/jDwjphR0y7U/hqdefault.jpg" alt="Mercedes CL vs Hyundai Genesis">
           <div class="play-overlay">
             <i class="fas fa-play"></i>
           </div>
