--- a/vttv.html
+++ b/vttv.html
@@ -702,6 +702,40 @@
       <!-- TADY ZAČNE ČÁST 2 S VIDEI -->
 
 <!-- NEJNOVĚJŠÍ VIDEA 2025 -->
+
+      <!-- Ford e-Tourneo Custom 2024 -->
+<div class="video-card" data-tags="ford,e-tourneo,custom,electric,mpv,test,recenze,2024" onclick="openModal(this)">
+  <div class="video-thumbnail">
+    <img src="https://img.youtube.com/vi/Wvp0mWN0nKU/maxresdefault.jpg" alt="Ford e-Tourneo Custom Test">
+    <div class="play-overlay">
+      <i class="fas fa-play"></i>
+    </div>
+    <div class="platform-badge youtube">YOUTUBE</div>
+  </div>
+  <div class="video-info">
+    <h3 class="video-title">Ford e-Tourneo Custom 2024</h3>
+    <p class="video-description">Test elektrického MPV Ford e-Tourneo Custom.</p>
+    <div class="video-tags">
+      <span class="video-tag">ford</span>
+      <span class="video-tag">e-tourneo</span>
+      <span class="video-tag">custom</span>
+      <span class="video-tag">electric</span>
+      <span class="video-tag">mpv</span>
+      <span class="video-tag">test</span>
+      <span class="video-tag">recenze</span>
+    </div>
+    <div class="video-meta">
+      <span>6. září 2025</span>
+      <span><i class="fab fa-youtube"></i></span>
+    </div>
+  </div>
+  <div class="video-data" style="display: none;">
+    <span class="video-url">https://youtu.be/Wvp0mWN0nKU</span>
+    <span class="video-platform">youtube</span>
+    <span class="video-date">2025-09-06</span>
+    <span class="video-full-description">Test elektrického MPV Ford e-Tourneo Custom. Testujeme elektrický pohon, dojezd, praktičnost a prostornost. Jak si vede elektrická verze populární dodávky pro větší rodiny?</span>
+  </div>
+</div>
       
       <!-- Hyundai Staria HEV 2025 -->
       <div class="video-card" data-tags="hyundai,staria,hev,hybrid,test,recenze,2025" onclick="openModal(this)">
