--- a/vttv.html
+++ b/vttv.html
@@ -738,6 +738,40 @@
       
 <!-- NEJNOVĚJŠÍ VIDEA 2025 -->
 
+      <!-- Opel Corsa Hybrid 2025 -->
+<div class="video-card" data-tags="opel,corsa,hybrid,test,hatchback,recenze,2025" onclick="openModal(this)">
+  <div class="video-thumbnail">
+    <img src="https://img.youtube.com/vi/XCq03fZ1v4A/maxresdefault.jpg" alt="Opel Corsa Hybrid Test">
+    <div class="play-overlay">
+      <i class="fas fa-play"></i>
+    </div>
+    <div class="platform-badge youtube">YOUTUBE</div>
+  </div>
+  <div class="video-info">
+    <h3 class="video-title">Opel Corsa Hybrid 2025</h3>
+    <p class="video-description">Hybridní Opel Corsa? Bude lepší, než premiant Toyota Yaris? </p>
+    <div class="video-tags">
+      <span class="video-tag">opel</span>
+      <span class="video-tag">corsa</span>
+      <span class="video-tag">hybrid</span>
+      <span class="video-tag">test</span>
+      <span class="video-tag">hatchback</span>
+      <span class="video-tag">recenze</span>
+      <span class="video-tag">2025</span>
+    </div>
+    <div class="video-meta">
+      <span>4. října 2025</span>
+      <span><i class="fab fa-youtube"></i></span>
+    </div>
+  </div>
+  <div class="video-data" style="display: none;">
+    <span class="video-url">https://www.youtube.com/watch?v=XCq03fZ1v4A</span>
+    <span class="video-platform">youtube</span>
+    <span class="video-date">2025-10-04</span>
+    <span class="video-full-description">Test hybridního hatchbacku Opel Corsa. Testujeme hybridní systém, spotřebu, jízdní vlastnosti a praktičnost městského vozu. Jak si vede malý Opel s hybridním pohonem?</span>
+  </div>
+</div>
+
       <!-- Toyota C-HR 2.0 PHEV -->
 <div class="video-card" data-tags="toyota,c-hr,phev,plug-in,hybrid,test,recenze,2025" onclick="openModal(this)">
   <div class="video-thumbnail">
