--- a/vttv.html
+++ b/vttv.html
@@ -705,6 +705,40 @@
       
 <!-- NEJNOVĚJŠÍ VIDEA 2025 -->
 
+      <!-- Citroën C3 Aircross Electric 2025 -->
+<div class="video-card" data-tags="citroën,aircross,c3,test,recenze,electric,crossover,2025" onclick="openModal(this)">
+  <div class="video-thumbnail">
+    <img src="https://img.youtube.com/vi/rpiZP8cnFi4/maxresdefault.jpg" alt="Citroën C3 Aircross Electric Test">
+    <div class="play-overlay">
+      <i class="fas fa-play"></i>
+    </div>
+    <div class="platform-badge youtube">YOUTUBE</div>
+  </div>
+  <div class="video-info">
+    <h3 class="video-title">Citroën C3 Aircross Electric 2025</h3>
+    <p class="video-description">Test elektrické verze Citroenu C3 Aircross. Jak si vede francouzský crossover s elektrickým pohonem?</p>
+    <div class="video-tags">
+      <span class="video-tag">citroën</span>
+      <span class="video-tag">aircross</span>
+      <span class="video-tag">c3</span>
+      <span class="video-tag">test</span>
+      <span class="video-tag">recenze</span>
+      <span class="video-tag">electric</span>
+      <span class="video-tag">crossover</span>
+    </div>
+    <div class="video-meta">
+      <span>14. října 2025</span>
+      <span><i class="fab fa-youtube"></i></span>
+    </div>
+  </div>
+  <div class="video-data" style="display: none;">
+    <span class="video-url">https://youtu.be/rpiZP8cnFi4</span>
+    <span class="video-platform">youtube</span>
+    <span class="video-date">2025-10-14</span>
+    <span class="video-full-description">Test elektrické verze Citroenu C3 Aircross. Testujeme elektrický pohon, dojezd, praktičnost a francouzský komfort. Jak si vede francouzský crossover s elektrickým pohonem?</span>
+  </div>
+</div>
+
       <!-- Opel Corsa Hybrid 2025 -->
 <div class="video-card" data-tags="opel,corsa,hybrid,test,hatchback,recenze,2025" onclick="openModal(this)">
   <div class="video-thumbnail">
