Update championship title for 2025 season

--- a/GT7/sezona2025.html
+++ b/GT7/sezona2025.html
@@ -235,7 +235,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏁 GT7 Racing Championship</h1>
+            <h1>🏁 HRIC-PIC-MA-MA-TAMA GT7 Championship 2025</h1>
             <div class="subtitle">Oficiální přehled závodů a výsledků</div>
         </header>
 
