--- a/GT7/sezona2025.html
+++ b/GT7/sezona2025.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GT7 Racing Championship</title>
+    <title>GT7 Racing Championship 2025</title>
     <style>
         * {
             margin: 0;
@@ -16,6 +16,76 @@
             background: #f5f5f7;
             color: #1d1d1f;
             line-height: 1.6;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        body.dark-mode {
+            background: #1d1d1f;
+            color: #f5f5f7;
+        }
+
+        body.dark-mode .section {
+            background: #2d2d2f;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+        }
+
+        body.dark-mode h2 {
+            color: #f5f5f7;
+        }
+
+        body.dark-mode th {
+            background: #3d3d3f;
+            color: #f5f5f7;
+            border-bottom: 2px solid #4d4d4f;
+        }
+
+        body.dark-mode td {
+            border-bottom: 1px solid #3d3d3f;
+        }
+
+        body.dark-mode tr:hover {
+            background: #3a3a3c;
+        }
+
+        body.dark-mode .race-card {
+            background: #3d3d3f;
+            border-left-color: #667eea;
+        }
+
+        body.dark-mode .race-title {
+            color: #f5f5f7;
+        }
+
+        body.dark-mode .race-date {
+            color: #98989d;
+        }
+
+        body.dark-mode .detail-label {
+            color: #98989d;
+        }
+
+        body.dark-mode .detail-value {
+            color: #f5f5f7;
+        }
+
+        body.dark-mode input,
+        body.dark-mode select,
+        body.dark-mode textarea {
+            background: #3d3d3f;
+            border-color: #4d4d4f;
+            color: #f5f5f7;
+        }
+
+        body.dark-mode label {
+            color: #f5f5f7;
+        }
+
+        body.dark-mode .tab {
+            color: #98989d;
+        }
+
+        body.dark-mode .tab.active {
+            color: #667eea;
         }
 
         .container {
@@ -235,7 +305,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏁 GT7 Racing Championship</h1>
+            <h1>🏁 HRIC-PIC-MA-MA-TAMA GT7 Championship</h1>
             <div class="subtitle">Oficiální přehled závodů a výsledků</div>
         </header>
 
@@ -396,6 +466,20 @@
             },
             archive: []
         };
+
+        // Automatické přepínání tmavého/světlého motivu
+        function setThemeByTime() {
+            const hour = new Date().getHours();
+            // Tmavý motiv mezi 18:00 - 6:00
+            if (hour >= 18 || hour < 6) {
+                document.body.classList.add('dark-mode');
+            } else {
+                document.body.classList.remove('dark-mode');
+            }
+        }
+
+        // Nastav motiv při načtení
+        setThemeByTime();
 
         // Načtení dat
         async function loadData() {
