Add interesting stats section to the page

--- a/GT7/sezona2025.html
+++ b/GT7/sezona2025.html
@@ -38,6 +38,10 @@
                 <h2>Vývoj bodů v sezóně</h2>
                 <div id="points-chart"></div>
             </div>
+            <div class="section animate-in">
+    <h2>🔥 Zajímavosti sezóny</h2>
+    <div class="stats-grid" id="interesting-stats"></div>
+</div>
             <div class="section">
                 <h2>Nadcházející závody</h2>
                 <div id="upcoming-races"></div>
